packages/kotti-style/_navbar.scss
$mobile-navbar-height: 2.4rem;
$narrow-navbar-width: 3.2rem;
.navbar {
	flex: 0 0 $navbar-width;
	background-color: $primary-600;
	border-right: 1px solid #000;
	bottom: 0;
	left: 0;
	top: 0;
	position: relative;
	z-index: $zindex-1;
	min-height: 100vh;
	&--narrow {
		flex: 0 0 $narrow-navbar-width;
	}
}

.navbar-wrapper {
	position: fixed;
	width: $navbar-width;
	display: flex;
	height: 100%;
	flex-wrap: nowrap;
	flex-direction: column;
	&--narrow {
		flex: 0 0 $narrow-navbar-width;
		width: $narrow-navbar-width;
	}
}

.navbar-toggle {
	height: $mobile-navbar-height;
	display: none;
	color: #fff;
	flex: 0 0 2.4rem;
	justify-content: center;
	text-align: center;
	align-items: center;
	width: 2.4rem;
	&:hover {
		cursor: pointer;
		background: rgba(0, 0, 0, 0.24);
	}
	&--active {
		background: $primary-700;
	}
}

.navbar-header {
	flex: 1 1 auto;
	border-bottom: 1px solid rgba(#fff, 0.26);
	&--narrow {
		padding: 1rem 0;
		text-align: center;
	}
	&:hover {
		cursor: pointer;
	}
}

.navbar-body {
	flex: 1 1 100%;
	overflow-y: auto;
	&--narrow {
		padding: 0;
	}
}

.navbar-footer {
	flex: 0 0 auto;
	padding: 0.8rem;
	border-top: 1px solid rgba(#fff, 0.26);
	&--narrow {
		display: flex;
		justify-content: center;
	}
}

.navbar-logo {
	display: flex;
	align-items: center;
	padding: 0.8rem 1.2rem;
	justify-content: space-between;
	&--logo {
		background-repeat: no-repeat;
		background-position: left;
		background-size: contain;
		flex: 1;
	}
	&--mobile {
		display: none;
		padding: 0.2rem;
		height: 100%;
	}
	&--narrow {
		display: block;
		padding: 0;
	}
	i {
		margin-left: 1.2rem;
		opacity: 0.64;
		&:hover {
			opacity: 1;
		}
	}
}

.navbar-dropdown {
	position: absolute;
	top: $mobile-navbar-height;
	padding: 0.8rem 0;
	width: 100%;
	display: none;
	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.26);
}

.navbar-notification {
	display: flex;
	align-items: center;
	justify-content: space-between;
	border-bottom: 1px solid rgba(#fff, 0.26);
	font-size: 0.75rem;
	line-height: 1.2rem;
	padding: 0.8rem 1.2rem;
	margin-bottom: 0.4rem;
	span {
		margin-left: 0.8rem;
	}
	&--narrow {
		justify-content: center;
		padding: 0.8rem 0;
	}
	.yoco {
		font-size: 1rem;
	}
	&__number {
		border-radius: 0.6rem;
		width: 1.2rem;
		height: 1.2rem;
		line-height: 1.2rem;
		font-size: 0.6rem;
		text-align: center;
		background: rgba(#fff, 0.26);
		&--narrow {
			right: 0.4rem;
			position: absolute;
		}
	}
	&--mobile {
		display: none;
	}
}
.navbar-menu {
	text-align: left;
	box-sizing: border-box;
	padding: 0.4rem 1.2rem;
	color: #fff;
	&:hover {
		cursor: pointer;
	}
	&--narrow {
		padding: 0.4rem 0;
		margin: 0.8rem 0.2rem;
		text-align: center;
	}
	&__section {
		display: block;
		text-transform: uppercase;
		font-size: 0.75em;
		font-weight: 700;
		opacity: 0.64;
		padding: 0.2rem 0;
		margin-top: 0.4rem;
	}
	&__item {
		display: block;
		font-size: 0.75rem;
		padding: 0.6rem 0;
	}
	&__item span {
		margin-left: 0.8rem;
	}
	.yoco {
		font-size: 1rem;
	}
	.active {
		font-weight: 700;
	}
}

@media (max-width: $size-md) {
	.navbar {
		height: 2.4rem;
		min-height: auto;
		z-index: $zindex-4;
		border: 0;
		flex: 0 0 $mobile-navbar-height;
	}
	.navbar-wrapper {
		width: 100%;
		padding: 0;
		position: relative;
		flex-direction: row;
		flex: 0 0 $mobile-navbar-height;
		height: $mobile-navbar-height;
		border-bottom: 1px solid #ddd;
	}
	.navbar-header {
		width: 100%;
		padding: 0;
	}
	.navbar-logo {
		display: none;
		&--mobile {
			display: flex;
		}
		&--logo {
			background-position: center;
		}
	}
	.navbar-notification {
		display: none;
		&--mobile {
			border: 0;
			margin: 0.6rem 0;
			height: 1.2rem;
			width: 1.2rem;
			text-align: center;
			background: rgba(#fff, 0.26);
			border-radius: 1.2rem;
			display: block;
			.yoco {
				font-size: 1rem;
			}
		}
	}
	.navbar-body {
		display: none;
	}
	.navbar-dropdown {
		display: block;
	}
	.navbar--narrow .navbar-wrapper {
		padding: 0;
	}
	.navbar-toggle {
		display: flex;
	}
	.navbar-header {
		border: 0;
	}
	.navbar-footer {
		display: flex;
		border: 0;
		flex: 0 0 2.4rem;
		justify-content: center;
		align-items: center;
	}
}

